J'ai modifié stylesheet pour que améliorer les @media (il y avait un petit bug dans le menu quand on passait de version mobile à version screen)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -306,7 +306,13 @@ body{
 #movieContent img{
     width: 80%;
 }
+/* Responsive pour moins de 1020px */
+@media screen and (min-width:1021px) {
 
+    #miniMenu {
+        visibility: hidden;
+    }
+}
 /* Responsive pour moins de 1020px */
 @media screen and (max-width:1020px) and (min-width: 849px){
     #miniBar {
